<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity"
    android:background="@color/md_theme_light_tertiaryContainer">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvCurrentTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="52sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck"
                tools:text="28°" />

            <TextView
                android:id="@+id/tvCurrentWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@id/tvCurrentTemperature"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentTemperature"
                tools:ignore="TextContrastCheck"
                tools:text="Current Weather" />

            <ImageView
                android:id="@+id/ivCurrentWeatherIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="@id/tvCurrentTemperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvCurrentWeather"
                tools:background="@color/design_default_color_primary_variant"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tvTimezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/md_theme_light_onPrimary"
                app:layout_constraintStart_toStartOf="@id/tvCurrentWeather"
                app:layout_constraintTop_toBottomOf="@id/tvCurrentWeather"
                tools:ignore="TextContrastCheck"
                tools:text="Buenos Aires" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHourlyWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTimezone"
                android:layout_marginTop="32dp"
                app:strokeWidth="0dp"
                app:cardCornerRadius="24dp"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hourly_broadcast"
                        android:layout_margin="16dp"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvHourlyWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:scrollbars="none"
                        tools:listitem="@layout/item_hourly" />


                </LinearLayout>



            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDailyWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardHourlyWeather"
                android:layout_marginTop="24dp"
                app:strokeWidth="0dp"
                app:cardCornerRadius="24dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_8_day_broadcast"
                        android:textSize="20sp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="16dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDayWeather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        tools:listitem="@layout/item_daily"/>

                </LinearLayout>



            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardUv"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@id/cardDailyWeather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cardHumidity"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="24dp"
                app:strokeWidth="0dp"
                android:clickable="true"
                android:focusable="true"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/baseline_sunny_24"
                        android:layout_marginBottom="8dp"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/tvUVtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uv_index"/>

                    <TextView
                        android:id="@+id/tvUVValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHumidity"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="@+id/cardUv"
                app:layout_constraintStart_toEndOf="@+id/cardUv"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="24dp"
                app:strokeWidth="0dp"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/baseline_water_drop_24"
                        android:layout_marginBottom="8dp"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/tvHumidityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"/>

                    <TextView
                        android:id="@+id/tvHumidityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardWindSpeed"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@id/cardUv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cardFeelsLike"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="24dp"
                app:strokeWidth="0dp"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/baseline_air_24"
                        android:layout_marginBottom="8dp"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/tvWindTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"/>

                    <TextView
                        android:id="@+id/tvWindValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardFeelsLike"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="@+id/cardWindSpeed"
                app:layout_constraintStart_toEndOf="@+id/cardWindSpeed"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="24dp"
                app:strokeWidth="0dp"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/baseline_dew_point_24"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/tvFeelsLikeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feels_like"/>

                    <TextView
                        android:id="@+id/tvFeelsLikeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>